--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/paxys/quickjs-dts.git"
   },
   "author": "Enno Boland <mail@eboland.de",
-  "license": "BSD-2-Clause",
+  "license": "0BSD",
   "bugs": {
     "url": "https://github.com/paxys/quickjs-dts/issues"
   },
