use triple slash references in index.d.ts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint"
 	],
 	"rules": {
+		"@typescript-eslint/triple-slash-reference": "off",
 		"@typescript-eslint/no-explicit-any": "off",
 		"indent": [
 			"error",
