--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "homepage": "https://github.com/Gottox/quickjs-dts#readme",
   "devDependencies": {
-    "typescript": "^4.8.4",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.27.0"
+    "eslint": "^8.27.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "typedoc": "^0.23.20",
+    "typescript": "^4.8.4"
   }
 }
